--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.555.0",
     "mongodb": "^7.0.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
